openshift/dc.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  namespace: "yolo-apps"
  name: "yolo-cat"
  labels:
    app: cat
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cat
    spec:
      containers:
        - name: cat
          image: "172.30.1.1:5000/yolo-apps/yolocat:latest"
