openshift/route.yml
apiVersion: v1
kind: Route
metadata:
  namespace: "yolo-apps"
  name: "yolo-cat"
  labels:
    app: "cat"
spec:
  host: ""
  tls:
    termination: edge
  port:
    targetPort: "yolo-cat-8080-tcp"
  to:
    kind: Service
    name: "yolo-cat"
